// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Tooltip/InfoTooltip ActivatedByClick smoke-test 1`] = `
<div class="m-10">
  <span class="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 cursor-pointer">
  </span>
</div>
`;

exports[`design-system/Tooltip/InfoTooltip Default smoke-test 1`] = `
<div class="m-10">
  <span class="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6">
  </span>
</div>
`;
